--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -158,11 +158,11 @@ html {
 }
 
 #header .mobile-menu-btn:hover {
-    background-color: #ccc;
+    background-color: #000;
 }
 
 #header .mobile-menu-btn:hover .menu-icon {
-    color: #000;
+    color: #fff;
 }
 
 #header .search-btn:hover {
@@ -201,10 +201,6 @@ html {
     font-weight: 800;
     margin-top: 23px;
     text-shadow: 0 0 1px #000;
-}
-
-#content {
-    
 }
 
 #content .content-section {
@@ -407,4 +403,115 @@ html {
 
 #footer .copy-right a {
     color: rgba(0, 0, 0, 0.6);
+}
+
+
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.4);
+    z-index: 2;
+    justify-content: center;
+    align-items: center;
+    display: none;
+}
+
+.modal.open {
+    display: flex;
+}
+
+.modal-close {
+    position: absolute;
+    right: 0;
+    top: 0;
+    color: #fff;
+    font-size: 16px;
+    padding: 12px 17px;
+    cursor: pointer;
+    opacity: 0.8;
+}
+
+.modal-close:hover {
+    opacity: 1;
+}
+
+.modal-containter {
+    background-color: #fff;
+    width: 900px;
+    max-width: calc(100% - 64px);
+    min-height: 200px;
+    position: relative;
+    animation: modalFadeIn ease 0.5s;
+}
+
+.modal-header {
+    background: #009688;
+    height: 130px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 30px;
+    color: #fff;
+}
+
+.modal-heading-icon {
+    margin-right: 16px;
+}
+
+
+.modal-body {
+    padding: 16px;
+}
+
+.modal-label {
+    display: block;
+    font-size: 15px;
+    margin-bottom: 12px;
+}
+
+.modal-input {
+    border: 1px solid #ccc;
+    width: 100%;
+    padding: 10px;
+    font-size: 15px;
+    margin-bottom: 24px;
+}
+
+#buy-tickets {
+    width: 100%;
+    padding: 15px;
+    background: #009688;
+    border: none;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 15px;
+}
+
+#buy-tickets:hover {
+    cursor: pointer;
+    opacity: 0.9;
+}
+
+.modal-footer {
+    padding: 16px;
+    text-align: right;
+}
+
+.modal-footer a {
+    color: #39a1f4;
+}
+
+
+@keyframes modalFadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(-150px)
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0)
+    }
 }
